# v17

./: CMakeLists.txt  auto_bench.sh
bench/: bench-zstd.py  main copy.py  main.py
bench/modules/: configs.py  engine.py  evaluator.py  loader.py  shan.py  utils.py
experiment/: batch_judge.py  calculate-entro.py  calculate-fm.py  calculate-size.py  calculate-tra.py  get_top.py  mtbench-judge.py  traditional.py  zstdquickcheck.py
experiment/AWQ/: awq-eval.py  mt_bench_answers_awq-4bit-baseline.jsonl
experiment/AWQ/llama2-13b/: awq-eval.py  run_awq.py
experiment/AWQ/llama3.1-8b/: awq-eval.py  mt_bench_judgments_awq-4bit-baseline.jsonl  mtbench-judge.py  run_awq.py
experiment/GPTQ/: eval.py  eval.sh  run_gptq.py
experiment/GPTQ/llama2-13b/: gptq-eval.py  (+2 more)
experiment/Llama-3.1-70B/: entrodelta-Llama-3.1
experiment/ablation/: draw-ablation-bar.py  draw-ablation-percent.py
experiment/bitdelta/: bitdelta-eval2.py  mt_bench_answers_bitdelta_honest_retest.jsonl  mt_bench_judgments_bitdelta_honest_retest.jsonl
experiment/draw/: draw-pareto-bert-10.py  draw-pareto-llama3.1-8b-MTbench.py  draw-pareto-llama3.1-8b-gsm8k.py  draw-pareto-llama3.1-8b-mmlu.py  draw-pareto-roberta.py  draw-ratio-9model.py  parse_log.py  parsed_metrics copy.json  parsed_metrics-bert_ner10.json  parsed_metrics-llama-3.1-8b.json  parsed_metrics-roberta-large-1.json  parsed_metrics.csv
include/: core-ablation.hpp  core.hpp
include/base/: bit_ops.hpp  types.hpp
include/kernels/: pfor.hpp  shuffle.hpp
include/layers/: lossy.hpp
scripts/: auto_bench.sh  build.sh
src/: bind.cpp
(+46 files in other folders)
